[package]
name = "cargo2junit"
description = "Converts cargo's json output (from stdin) to JUnit XML (to stdout)"
version = "0.1.5"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2018"
repository = "https://github.com/johnterickson/cargo2junit"
readme = "README.md"
keywords = ["cargo", "test", "junit"]
categories = ["development-tools::testing"]
license = "MIT"

[badges]
# azure-devops = { repository = "https://github.com/johnterickson/cargo2junit", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
junit-report = "0.2.0"
serde_json = "1.0.38"
serde = { version = "1.0", features = ["derive"] }